--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:DpaCzHXL8EGFbCiX3z6u2zs1VJVL9SE+Gfeo2akrLlg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
