--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.5",
+        "predis/predis": "^2.1",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
